--- a/README
+++ b/README
@@ -1,1 +1,7 @@
+Hello and welcome to my Homelab Documentation.
 
+I am creating this page to show just how much I love documentation.
+
+I have coerced an old 4790k processor to work with Server 2025, with 16gb of DDR3 ram. 
+
+Herein lies the documentation (sanitized) for your viewing pleasure.
